flux/apps/qbitorrent-wg/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-wg
  namespace: multimedia-factory
spec:
  type: ClusterIP
  selector:
    app: qbittorrent-wg
  ports:
    - name: webui
      port: 8080
      targetPort: 8080
      protocol: TCP
